fixed scrollbar below nav

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,8 @@ body {
 body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
+  overflow: auto;
+  overflow: initial;
 }
 
 .diagonal-section::before {
